<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="#E9CC7D"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="97dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/smallclock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/acme"
        android:text="TICKTICK"
        android:textColor="#131212"
        android:textSize="22sp" />

    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--app:cardCornerRadius="8dp">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E9CC7D"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/atomic_age"
            android:text="Username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/drawable_edittext"
            android:drawableRight="@drawable/ic_user"
            android:fontFamily="@font/acme"
            android:hint="Enter Username"
            android:paddingLeft="8dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:textSize="20sp"
            android:text="Password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/drawable_edittext"
            android:drawableRight="@drawable/ic_password"
            android:fontFamily="@font/acme"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_button"
            android:text="Login"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="openRegisterActivity"
            android:orientation="horizontal"
            tools:ignore="OnClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="Don't have account ?" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:paddingLeft="5dp"
                android:text="Click Here."
                android:textColor="#3F51B5" />

        </LinearLayout>

    </LinearLayout>

    <!--</android.support.v7.widget.CardView>-->


</LinearLayout>